# rizzmeplease

./: IMESSAGE_EXTENSION_SCAFFOLD_OUTLINE.md  LOCAL_MOCK_TESTING.md  MCP_SETUP.md  package-lock.json
RizzCoach/: README.md  RizzCoachApp.swift  SESSION_NOTES.md
RizzCoach/Components/: ContextInputView.swift  ReplyCardsView.swift  VibeCardsView.swift
api/: .env  .env.example  README.md  cld.data.md  pyproject.toml  schema.sql
api/deploy/digitalocean/: README.md  bootstrap_droplet.sh  deploy_update.sh  nginx-rizzmeow.conf  rizzmeplease-api.service
api/scripts/: api_suggestions_smoke.py  grok_smoke_test.py
api/src/: config.py  main.py
api/src/middleware/: __init__.py  auth.py  rate_limit.py
api/src/models/: __init__.py  schemas.py
api/src/routes/: __init__.py  auth.py  coach.py  feedback.py  history.py  suggestions.py  user.py
api/src/services/: __init__.py  ai_service.py  database.py
api/tests/: mock_extension_payloads.json
rizzmeplease/: APIService.swift  AppRuntimeConfig.swift  AppState.swift  AuthenticationManager.swift  BUILD_AND_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MockDataService.swift  Models.swift  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  StorageService.swift  TextCoachApp.swift  ViewsCoachView.swift  ViewsGoalTonePickerView.swift  ViewsHistoryView.swift  ViewsHomeView.swift  ViewsMainTabView.swift  ViewsNewAnalysisFlow.swift  ViewsOnboardingView.swift  ViewsSettingsView.swift  ViewsSuggestionsView.swift
rizzmeplease MessagesExtension/: MessagesViewController.swift  TextCoachApp.swift
rizzmeplease.xcodeproj/: project.pbxproj
(+22 files in other folders)
